--- a/lib/Components/components/navigator/buttons/close.html
+++ b/lib/Components/components/navigator/buttons/close.html
@@ -10,7 +10,7 @@
 </template>
 <script>
 	(function(doc){
-		const NavigatorClose = wwi.element(doc).extension(...components.navigator.mix('Button'))
+		const NavigatorClose = wwi.element(doc).extension(...window.components.navigator.mix('Button'))
 		NavigatorClose(class extends NavigatorClose.Element{})
 	})(document)
 </script>
