--- a/lib/Components/components/navigator/buttons/launch.html
+++ b/lib/Components/components/navigator/buttons/launch.html
@@ -12,7 +12,7 @@
 </template>
 <script>
 	(function(doc){
-		const NavigatorLaunch = wwi.element(doc).extension(...components.navigator.mix('Button'))
+		const NavigatorLaunch = wwi.element(doc).extension(...window.components.navigator.mix('Button'))
 		NavigatorLaunch(class extends NavigatorLaunch.Element{
 
 		})
