--- a/lib/Components/components/navigator/buttons/clear.html
+++ b/lib/Components/components/navigator/buttons/clear.html
@@ -39,7 +39,7 @@
 </template>
 <script>
 	(function(doc){
-		const NavigatorClear = wwi.element(doc).extension(...components.navigator.mix('Button'))
+		const NavigatorClear = wwi.element(doc).extension(...window.components.navigator.mix('Button'))
 		NavigatorClear(class extends NavigatorClear.Element{
 			connectedCallback(){
 				super.connectedCallback()
