--- a/lib/Components/components/navigator/buttons/design.css
+++ b/lib/Components/components/navigator/buttons/design.css
@@ -2,7 +2,7 @@
 :host{
     --color:var(--watermelon);
     --background:rgba(255,255,255,0.1);
-    --focus-shadow:inset 0 -1px 3px rgba(0,0,0,0.35), 0 0 0 1.5px var(--color);
+    --focus-shadow:inset 0 -1px 3px rgba(0,0,0,0.35),inset 0 0 0 1.5px var(--color);
     --button-width:var(--width,30px);
     display:inline-block;
     position: relative;
@@ -13,7 +13,6 @@
     width: var(--button-width,30px);
     border-radius: 100px;
     box-shadow: inset 0 0 0 rgba(0,0,0,0.2);
-    filter:none;
     transition:box-shadow 100ms linear,opacity 300ms linear;
     will-change:box-shadow,opacity;
     outline: none;
@@ -35,14 +34,8 @@
     top:0;left:0;right:0;bottom:0;
     border-radius: inherit;
     background-color: transparent;
-    transition:filter 200ms ease;
-    will-change:filter;
-    filter:brightness(100%);
 }
 
-:host([no-shadow]){
-    /*--focus-shadow:none;*/
-}
 
 :host(:focus),
 :host(:active),
@@ -54,7 +47,6 @@
 :host(:active):before,
 :host(:focus):before{
     background-color: var(--background);
-    filter:brightness(80%);
 }
 
 :host([aria-selected="true"]){
@@ -65,9 +57,6 @@
     position: relative;
     height:100%;
     width: 100%;
-    transition:filter 200ms ease;
-    will-change:filter;
-    filter:brightness(100%);
 }
 
 :host([auto]) [box]{
@@ -78,7 +67,6 @@
 
 :host(:active) [box],
 :host([aria-selected="true"]) [box]{
-    filter:brightness(80%);
     background-color: var(--background);
     border-radius: inherit;
 }
