--- a/lib/Components/components/search/design/search.css
+++ b/lib/Components/components/search/design/search.css
@@ -6,7 +6,7 @@ input {
     color: #9e9e9e;
 
     background: transparent url('../graphics/search.svg') no-repeat 10px center;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgb(244, 244, 244);
     background-size: 16px 16px;
     border-radius: 100px;
     border: solid 1px rgba(23, 30, 38, 0.2);
