--- a/components/navigator/component.html
+++ b/components/navigator/component.html
@@ -2,9 +2,10 @@
     <style>
 		@import "modules/wwi/component/design/host.css";
 		:host{
-			--navigator-bottom-border:1px solid var(--gray);
+			--navigator-bottom-border:1px solid var(--platinum);
+
 			--color:var(--navigator-color,var(--azul));
-			background:var(--navigator-background,ghostwhite);
+			background:var(--navigator-background,var(--platinum-light));
 			display: none;
 			height:40px;
 			box-sizing: border-box;
@@ -25,7 +26,7 @@
 		}
 
 		search-component{
-			background:var(--navigator-background,ghostwhite);
+			background:var(--navigator-background,var(--platinum-light));
 			left:90px;
 			--input-left:-45px;
 		}
